recursion.cons.nlast.Nlast.scala.error
Erreur de compilation :
Nlast:13: error: ':' expected but ',' found.
def reverseh(l,acc): List[Int] = {
              ^Nlast:21: error: identifier expected but '}' found.
}
^